1 现在正在更新那个透明框可以随时取消了 取消的时候 就会终止下载 2 可以选择是否在移动网络下缓存卡片大图 3 可以一次性缓存所有卡片大图 4 生日提醒功能正式完成

--- a/CGSSGuide/en.lproj/Main.strings
+++ b/CGSSGuide/en.lproj/Main.strings
@@ -158,6 +158,9 @@
 /* Class = "UIButton"; normalTitle = "Passion"; ObjectID = "sGN-vw-0uS"; */
 "sGN-vw-0uS.normalTitle" = "Passion";
 
+/* Class = "UILabel"; text = "使用移动网络时隐藏卡片大图"; ObjectID = "u1E-LY-NTo"; */
+"u1E-LY-NTo.text" = "使用移动网络时隐藏卡片大图";
+
 /* Class = "UIButton"; normalTitle = "Dance"; ObjectID = "uiM-RA-fhT"; */
 "uiM-RA-fhT.normalTitle" = "Dance";
 
@@ -169,6 +172,9 @@
 
 /* Class = "UILabel"; text = "发送邮件"; ObjectID = "xrP-YC-gLm"; */
 "xrP-YC-gLm.text" = "发送邮件";
+
+/* Class = "UILabel"; text = "缓存所有卡片大图"; ObjectID = "yF0-cl-Say"; */
+"yF0-cl-Say.text" = "缓存所有卡片大图";
 
 /* Class = "UITableViewSection"; headerTitle = "数据"; ObjectID = "zA8-n9-zYp"; */
 "zA8-n9-zYp.headerTitle" = "数据";
