--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 ChangeLog
 v1.0.3
-1. 优化本地数据存储，更新完毕后启动时需要重新下载资源数据
+2016-8-21
+1. 优化本地数据存储，更新完毕后需要重新下载资源数据
 2. 组队页面选人和选歌时添加返回按钮
 3. 修复几处弹出菜单导致iPad上会闪退的问题
 4. 卡片大图全屏化之后状态栏会隐藏
@@ -10,7 +11,7 @@ v1.0.3
 8. 修正iPad上多处表格内容和分割线的左右间隙过大的问题
 
 v1.0.2
-2016-8-20
+2016-8-19
 1. 生日提醒功能正式开放，此功能默认关闭，请前往工具->偶像生日提醒中打开
 2. 现在检查数据更新可以随时取消了
 3. 设置页面可以选择是否在移动网络下缓存卡片大图(默认打开)
