--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 ChangeLog
+v1.0.4
+
+1. 缓存所有图片按钮的位置微调 防止误点
+2. 缓存图片时也可以看到缓存大小的变化
+3. 修复R卡N卡详情显示为空白的问题
+4. 修复多个页面右滑返回上一层的手势失效的问题
+5. 修复有来电或手机作为热点时 队伍编辑时选人或选歌底部toolbar显示不全的问题
+6. 修复按相册编号和或稀有度排序时闪退的问题
+7. 选择队伍时 不必须点击空白处才能进入下一级菜单了
 
 v1.0.3
 2016-8-21
