卡片和组队卡片筛选页面的筛选条件可以自动保存 并且右上添加一个手工重置的按钮

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,17 @@
 ChangeLog
 v1.0.4
 
-1. 缓存所有图片按钮的位置微调 防止误点
-2. 缓存图片时也可以看到缓存大小的变化
-3. 修复R卡N卡详情显示为空白的问题
-4. 修复多个页面右滑返回上一层的手势失效的问题
-5. 修复有来电或手机作为热点时 队伍编辑时选人或选歌底部toolbar显示不全的问题
-6. 修复按相册编号和或稀有度排序时闪退的问题
-7. 选择队伍时 不必须点击空白处才能进入下一级菜单了
+1. 卡片的筛选条件在退出时可以自动保存，筛选页面右上可以手工重置筛选条件
+2. 修复按相册编号和或稀有度排序时闪退的问题
+3. 修复多个页面右滑返回上一层的手势失效的问题
+4. 修复首次进入谱面页面和每次进入生日提醒页面时卡顿的问题
+5. 缓存图片时也可以看到缓存大小的变化
+6. 修复有来电或手机作为热点时，队伍编辑时选人或选歌底部toolbar显示不全的问题
+7. 缓存所有图片按钮的位置微调，防止误点
+8. 选择队伍时，不必须点击空白处才能进入下一级菜单了
+9. 优化组队编辑时文本编辑过于难点而且容易误点的问题
+10. 略微增加歌曲难度按钮的高度
+11. 优化技能列表的下拉箭头过于难点的问题
 
 v1.0.3
 2016-8-21
