--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,21 @@
 ChangeLog
 v1.0.5
 
-1. 修复组队页面队伍多了之后卡顿的问题
-2. 优化组队编辑页面键盘弹出时表格自动躲避的表现
-
+1. 工具->角色信息查询正式上线，卡片详情页也可以跳转到角色信息页面
+2. 修复组队页面队伍多了之后卡顿的问题
+3. 歌曲页面也添加了筛选和排序功能
+4. 修复Nation Blue等歌曲的部分长按结束点异常的问题
+5. 修复了一个非常罕见的因多线程引起的进入歌曲谱面或选歌时崩溃的bug
+6. 修复純情Midnight伝説master难度缺失的问题
+7. 卡详情页添加同角色所有卡片信息
+8. 修复Groove活动中异色队伍的数值计算问题
+9. 延长图片缓存的过期时间（原本只有一星期）
+10. 修复谱面页面歌曲结束时的combo数有时不准确的问题(BEYOND THE STARLIGHT)
+11. 缓存所有图片时，也会缓存角色头像
+12. 多处界面细节优化
 
 v1.0.4
-
+2016-8-29
 1. 卡片的筛选条件在退出时可以自动保存，筛选页面右上可以手工重置筛选条件
 2. 修复按相册编号和或稀有度排序时闪退的问题
 3. 修复多个页面右滑返回上一层的手势失效的问题
