修复计算打歌分数时没有考虑偶像和歌曲同色时技能触发几率提高30%的因素

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 ChangeLog
-v1.0.5
+v1.0.6
 
+1. 修复计算打歌分数时没有考虑偶像和歌曲同色时技能触发几率提高30%的因素
+2. 修复iOS9.0之前的系统进入偶像生日提醒时崩溃的问题
+3. 卡片页面添加按技能类型筛选
+4. iPhone6之后的手机和所有的iPad上，卡片列表中也可以看到技能持续时间和触发几率
+5. 修复双叶杏的星座描述文字
+6. 生日提醒中的角色头像也可以跳转到角色信息页面
+
+v1.0.5
+2016-9-8
 1. 工具->角色信息查询正式上线，卡片详情页也可以跳转到角色信息页面
 2. 修复组队页面队伍多了之后卡顿的问题
 3. 歌曲页面也添加了筛选和排序功能
