--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,13 @@
 ChangeLog
 v1.0.6
 
-1. 修复计算打歌分数时没有考虑偶像和歌曲同色时技能触发几率提高30%的因素
-2. 修复iOS9.0之前的系统进入偶像生日提醒时崩溃的问题
-3. 卡片页面添加按技能类型筛选
-4. iPhone6之后的手机和所有的iPad上，卡片列表中也可以看到技能持续时间和触发几率
-5. 修复双叶杏的星座描述文字
-6. 生日提醒中的角色头像也可以跳转到角色信息页面
+1. 修复计算打歌平均分数时没有考虑偶像和歌曲(或groove颜色)同色时技能触发几率提高30%的因素(感谢吧友timeseal)
+2. 改进计算技能触发几率和持续时间的算法(感谢吧友statementreply)
+3. 修复iOS9.0之前的系统进入偶像生日提醒时崩溃的问题
+4. 卡片页面添加按技能类型筛选
+5. iPhone6之后的手机和所有的iPad上，卡片列表中也可以看到技能持续时间和触发几率
+6. 修复双叶杏的星座描述文字
+7. 生日提醒中的角色头像也可以跳转到角色信息页面
 
 v1.0.5
 2016-9-8
