--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -1,411 +1,410 @@
-﻿/* 角色信息页面 */
+﻿/* 角色資訊頁面 */
 "%d月%d日" = "%1$d月%2$d日";
 
-/* 模拟抽卡页面 */
-"* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素";
+/* 模擬抽卡頁面 */
+"* 當期新SSR佔全部SSR的40%\n* 未計算當期新SR、R的概率提高因素" = "* 當期新SSR佔全部SSR的40%\n* 未計算當期新SR、R的概率提高因素";
 
-/* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响";
+/* 隊伍詳情頁面 */
+"* 極限和平均分數中所有點為Perfect評價\n* 極限分數中所有技能100%觸發\n* 平均分數採用100次真實模擬後求平均值的方法，每次計算會略有不同\n* 平均分數沒有計算技能觸發率提升的隊長技能帶來的影響" = "* 極限和平均分數中所有點為Perfect評價\n* 極限分數中所有技能100%觸發\n* 平均分數採用100次真實模擬後求平均值的方法，每次計算會略有不同\n* 平均分數沒有計算技能觸發率提升的隊長技能帶來的影響";
 
-/* 设置页面 */
-"CGSSGuide问题反馈" = "CGSSGuide问题反馈";
+/* 設定頁面 */
+"CGSSGuide問題反饋" = "CGSSGuide問題反饋";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "Co曲" = "Co曲";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "Cu曲" = "Cu曲";
 
-/* 队伍详情页面 */
-"Groove类别" = "Groove类别";
+/* 隊伍詳情頁面 */
+"Groove類別" = "Groove類別";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "Pa曲" = "Pa曲";
 
-/* 生日提醒页面 */
-"一个月内" = "一个月内";
+/* 生日提醒頁面 */
+"一個月內" = "一個月內";
 
-/* 生日提醒页面 */
-"七天内" = "七天内";
+/* 生日提醒頁面 */
+"七天內" = "七天內";
 
-/* 角色信息页面 */
-"三围" = "三围";
+/* 角色資訊頁面 */
+"三圍" = "三圍";
 
-/* 下拉刷新文字 */
-"下拉检查更新" = "下拉检查更新";
+/* 下拉重新整理文字 */
+"下拉檢查更新" = "下拉檢查更新";
 
-/* 通用, 通常不会出现, 为一些未知字符串预留 */
+/* 通用, 通常不會出現, 為一些未知字元串預留 */
 "不明" = "不明";
 
-/* 技能触发几率的简写 */
+/* 技能觸發機率的簡寫 */
 "中" = "中";
 
-/* 角色信息页面 */
-"习惯用手" = "习惯用手";
+/* 角色資訊頁面 */
+"習慣用手" = "習慣用手";
 
-/* 生日提醒页面 */
+/* 生日提醒頁面 */
 "今天" = "今天";
 
 /* 生日通知正文 */
 "今天是%@的生日(%d月%d日)" = "今天是%1$@的生日(%2$d月%3$d日)";
 
-/* 技能触发几率的简写 */
+/* 技能觸發機率的簡寫 */
 "低" = "低";
 
-/* 角色信息页面 */
-"体重" = "体重";
+/* 角色資訊頁面 */
+"體重" = "體重";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "使用固定值" = "使用固定值";
 
-/* 底部弹出选项 */
-"保存到相册" = "保存到相册";
+/* 底部彈出選項 */
+"儲存到相簿" = "儲存到相簿";
 
-/* 弹出框标题 */
-"保存成功" = "保存成功";
+/* 彈出框標題 */
+"儲存成功" = "儲存成功";
 
-/* 角色信息页面 */
-"兴趣" = "兴趣";
+/* 角色資訊頁面 */
+"興趣" = "興趣";
 
-/* 通用, 通常不会出现, 为未知字符预留 */
+/* 通用, 通常不會出現, 為未知字元預留 */
 "其他" = "其他";
 
-/* 角色信息页面 */
+/* 角色資訊頁面 */
 "出生地" = "出生地";
 
-/* 模拟抽卡页面 */
-"十连" = "十连";
+/* 模擬抽卡頁面 */
+"十連" = "十連";
 
-/* 模拟抽卡页面 */
-"单抽" = "单抽";
+/* 模擬抽卡頁面 */
+"單抽" = "單抽";
 
-/* 模拟抽卡页面 */
+/* 模擬抽卡頁面 */
 "卡池" = "卡池";
 
-/* 卡片详情页 */
-"卡片属性" = "卡片属性";
+/* 卡片詳情頁 */
+"卡片屬性" = "卡片屬性";
 
-/* 弹出框按钮
-   底部弹出框按钮
-   设置页面
-   生日提醒页面
-   通用 */
+/* 彈出框按鈕
+ 底部彈出框按鈕
+ 設定頁面
+ 生日提醒頁面
+ 通用 */
 "取消" = "取消";
 
-/* 队伍详情页面 */
-"后援数值" = "后援数值";
+/* 隊伍詳情頁面 */
+"後援數值" = "後援數值";
 
-/* 弹出框正文 */
-"因数据更新导致队伍数据不完整，建议等待当前更新完成，或尝试在卡片页面下拉更新数据。" = "因数据更新导致队伍数据不完整，建议等待当前更新完成，或尝试在卡片页面下拉更新数据。";
+/* 彈出框正文 */
+"因資料更新導致隊伍資料不完整，建議等待當前更新完成，或嘗試在卡片頁面下拉更新資料。" = "因資料更新導致隊伍資料不完整，建議等待當前更新完成，或嘗試在卡片頁面下拉更新資料。";
 
-/* 设置页面
-   通用 */
-"失败" = "失败";
+/* 設定頁面
+ 通用 */
+"失敗" = "失敗";
 
-/* 队伍编辑页面 */
+/* 隊伍編輯頁面 */
 "好友" = "好友";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "好友技能" = "好友技能";
 
-/* 角色信息页面 */
+/* 角色資訊頁面 */
 "姓名假名" = "姓名假名";
 
-/* 导航栏按钮
-   角色信息页面 */
+/* 導航欄按鈕
+ 角色資訊頁面 */
 "完成" = "完成";
 
-/* 设置页面 */
-"将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。" = "将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。";
+/* 設定頁面 */
+"將會清除所有快取的圖片、卡片、歌曲資料。除非資料出現問題，不建議使用此選項。" = "將會清除所有快取的圖片、卡片、歌曲資料。除非資料出現問題，不建議使用此選項。";
 
-/* 卡片详情页 */
-"属性排名" = "属性排名";
+/* 卡片詳情頁 */
+"屬性排名" = "屬性排名";
 
-/* 角色年龄 */
-"岁" = "岁";
+/* 角色年齡 */
+"歲" = "歲";
 
-/* 生日提醒页面 */
-"已开启" = "已开启";
+/* 生日提醒頁面 */
+"已開啟" = "已開啟";
 
-/* 队伍详情页面 */
-"常规模式" = "常规模式";
+/* 隊伍詳情頁面 */
+"常規模式" = "常規模式";
 
-/* 队伍详情页面 */
-"平均分数(模拟)" = "平均分数(模拟)";
+/* 隊伍詳情頁面 */
+"平均分數(模擬)" = "平均分數(模擬)";
 
-/* 卡片详情页 */
-"平均覆盖率%" = "平均覆盖率%";
+/* 卡片詳情頁 */
+"平均覆蓋率%" = "平均覆蓋率%";
 
-/* 角色信息页面 */
-"年龄" = "年龄";
+/* 角色資訊頁面 */
+"年齡" = "年齡";
 
-/* 生日提醒页面 */
-"开启生日通知提醒" = "开启生日通知提醒";
+/* 生日提醒頁面 */
+"開啟生日通知提醒" = "開啟生日通知提醒";
 
-/* 队伍详情页面 */
-"开始计算" = "开始计算";
+/* 隊伍詳情頁面 */
+"開始計算" = "開始計算";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "彩色曲" = "彩色曲";
 
-/* 队伍详情页面 */
-"得分计算" = "得分计算";
+/* 隊伍詳情頁面 */
+"得分計算" = "得分計算";
 
-/* 设置页面
-   通用 */
+/* 設定頁面
+ 通用 */
 "成功" = "成功";
 
-/* 设置页面 */
-"所有图片总计超过300MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "所有图片总计超过300MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。";
+/* 設定頁面 */
+"所有圖片總計超過300MB，請檢查您的網路環境或剩餘流量，確認無誤後再點選確定。" = "所有圖片總計超過300MB，請檢查您的網路環境或剩餘流量，確認無誤後再點選確定。";
 
-/* 设置页面 */
-"打开邮箱失败" = "打开邮箱失败";
+/* 設定頁面 */
+"開啟郵箱失敗" = "開啟郵箱失敗";
 
-/* 队伍详情页面 */
-"技能触发" = "技能触发";
+/* 隊伍詳情頁面 */
+"技能觸發" = "技能觸發";
 
-/* 卡片详情页 */
-"持续时间s" = "持续时间s";
+/* 卡片詳情頁 */
+"持續時間s" = "持續時間s";
 
-/* 弹出框标题
-   设置页面 */
+/* 彈出框標題
+ 設定頁面 */
 "提示" = "提示";
 
-/* 弹出框正文 */
-"数据主版本过低，请点击确定开始更新" = "数据主版本过低，请点击确定开始更新";
+/* 彈出框正文 */
+"資料主版本過低，請點選確定開始更新" = "資料主版本過低，請點選確定開始更新";
 
-/* 弹出框正文 */
-"数据存在新版本，推荐进行更新，请点击确定开始更新" = "数据存在新版本，推荐进行更新，请点击确定开始更新";
+/* 彈出框正文 */
+"資料存在新版本，推薦進行更新，請點選確定開始更新" = "資料存在新版本，推薦進行更新，請點選確定開始更新";
 
 /* 更新框 */
-"数据是最新版本" = "数据是最新版本";
+"資料是最新版本" = "資料是最新版本";
 
-/* 致谢页面 */
-"数据来源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技术支持：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面设计：\nZXQ\n\n" = "数据来源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技术支持：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面设计：\nZXQ\n\n";
+/* 致謝頁面 */
+"資料來源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技術支援：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面設計：\nZXQ\n\n" = "資料來源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技術支援：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面設計：\nZXQ\n\n";
 
-/* 弹出框标题 */
-"数据缺失" = "数据缺失";
+/* 彈出框標題 */
+"資料缺失" = "資料缺失";
 
-/* 弹出框标题 */
-"数据需要更新" = "数据需要更新";
+/* 彈出框標題 */
+"資料需要更新" = "資料需要更新";
 
-/* 模拟抽卡页面 */
+/* 模擬抽卡頁面 */
 "新卡列表" = "新卡列表";
 
-/* 空字符串说明文字 */
-"无" = "无";
+/* 空字元串說明文字 */
+"無" = "無";
 
-/* 弹出框正文 */
-"无法获取游戏原始数据" = "无法获取游戏原始数据";
+/* 彈出框正文 */
+"無法獲取遊戲原始資料" = "無法獲取遊戲原始資料";
 
-/* 角色信息页面 */
-"日文名/罗马音/CV" = "日文名/罗马音/CV";
+/* 角色資訊頁面 */
+"日文名/羅馬音/CV" = "日文名/羅馬音/CV";
 
-/* 搜索框文字, 不宜过长 */
-"日文名/罗马音/技能/稀有度" = "日文名/罗马音/技能/稀有度";
+/* 搜尋框文字, 不宜過長 */
+"日文名/羅馬音/技能/稀有度" = "日文名/羅馬音/技能/稀有度";
 
-/* 生日提醒页面 */
-"时区" = "时区";
+/* 生日提醒頁面 */
+"時區" = "時區";
 
-/* 队伍详情页面 */
-"时长" = "时长";
+/* 隊伍詳情頁面 */
+"時長" = "時長";
 
-/* 生日提醒页面 */
+/* 生日提醒頁面 */
 "明天" = "明天";
 
-/* 角色信息页面 */
+/* 角色資訊頁面 */
 "星座" = "星座";
 
-/* 卡片详情页 */
+/* 卡片詳情頁 */
 "普池" = "普池";
 
-/* 设置页面 */
-"暂无需要缓存的图片，请先尝试更新其他数据。" = "暂无需要缓存的图片，请先尝试更新其他数据。";
+/* 設定頁面 */
+"暫無需要快取的圖片，請先嚐試更新其他資料。" = "暫無需要快取的圖片，請先嚐試更新其他資料。";
 
-/* 弹出框标题 */
+/* 彈出框標題 */
 "更新完成" = "更新完成";
 
 /* 更新框 */
-"更新数据中" = "更新数据中";
+"更新資料中" = "更新資料中";
 
-/* 队伍编辑页面 */
-"替换" = "替换";
+/* 隊伍編輯頁面 */
+"替換" = "替換";
 
-/* 卡片详情页 */
-"最大覆盖率%" = "最大覆盖率%";
+/* 卡片詳情頁 */
+"最大覆蓋率%" = "最大覆蓋率%";
 
-/* 角色信息页面 */
-"未付声" = "未付声";
+/* 角色資訊頁面 */
+"未付聲" = "未付聲";
 
-/* 生日提醒页面 */
-"未开启" = "未开启";
+/* 生日提醒頁面 */
+"未開啟" = "未開啟";
 
-/* 模拟抽卡页面 */
-"未找到有效的卡池数据，请尝试下拉刷新" = "未找到有效的卡池数据，请尝试下拉刷新";
+/* 模擬抽卡頁面 */
+"未找到有效的卡池資料，請嘗試下拉重新整理" = "未找到有效的卡池資料，請嘗試下拉重新整理";
 
-/* 设置页面 */
-"未设置邮箱账户" = "未设置邮箱账户";
+/* 設定頁面 */
+"未設定郵箱賬戶" = "未設定郵箱賬戶";
 
-/* 版权声明页面 */
-"本程序是非官方程序，所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程序所使用的卡片、歌曲等数据来源于网络，其版权在不违反官方版权的前提下遵循提供者的版权声明。\n----------------------------------------\n本程序使用的第三方库\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程序的所有界面、图标、非官方资源数据、代码基于MIT协议。\n如果对此项目感兴趣，请访问：\nhttps://github.com/superk589/CGSSGuide\n\n" = "本程序是非官方程序，所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程序所使用的卡片、歌曲等数据来源于网络，其版权在不违反官方版权的前提下遵循提供者的版权声明。\n----------------------------------------\n本程序使用的第三方库\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程序的所有界面、图标、非官方资源数据、代码基于MIT协议。\n如果对此项目感兴趣，请访问：\nhttps://github.com/superk589/CGSSGuide\n\n";
+/* 版權聲明頁面 */
+"本程式是非官方程式，所有本程式中使用的遊戲相關資料版權所屬為：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程式所使用的卡片、歌曲等資料來源於網路，其版權在不違反官方版權的前提下遵循提供者的版權聲明。\n----------------------------------------\n本程式使用的第三方庫\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程式的所有介面、圖示、非官方資源資料、程式碼基於MIT協議。\n如果對此項目感興趣，請訪問：\nhttps://github.com/superk589/CGSSGuide\n\n" = "本程式是非官方程式，所有本程式中使用的遊戲相關資料版權所屬為：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程式所使用的卡片、歌曲等資料來源於網路，其版權在不違反官方版權的前提下遵循提供者的版權聲明。\n----------------------------------------\n本程式使用的第三方庫\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程式的所有介面、圖示、非官方資源資料、程式碼基於MIT協議。\n如果對此項目感興趣，請訪問：\nhttps://github.com/superk589/CGSSGuide\n\n";
 
-/* 队伍详情页面 */
-"极限分数" = "极限分数";
+/* 隊伍詳情頁面 */
+"極限分數" = "極限分數";
 
-/* 模拟抽卡页面 */
-"查看完整卡池" = "查看完整卡池";
+/* 模擬抽卡頁面 */
+"檢視完整卡池" = "檢視完整卡池";
 
-/* 卡片详情页 */
-"查看角色详情" = "查看角色详情";
-
-/* 更新框 */
-"检查更新中" = "检查更新中";
+/* 卡片詳情頁 */
+"檢視角色詳情" = "檢視角色詳情";
 
 /* 更新框 */
-"检查更新失败" = "检查更新失败";
+"檢查更新中" = "檢查更新中";
+
+/* 更新框 */
+"檢查更新失敗" = "檢查更新失敗";
 
 /* No comment provided by engineer. */
 "歌曲名" = "歌曲名";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "歌曲模式" = "歌曲模式";
 
-/* 卡片详情页 */
-"活动" = "活动";
+/* 卡片詳情頁 */
+"活動" = "活動";
 
 /* 通用 */
 "特技" = "特技";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "特技列表" = "特技列表";
 
-/* 队伍编辑页面 */
-"特技等级" = "特技等级";
+/* 隊伍編輯頁面 */
+"特技等級" = "特技等級";
 
-/* 角色信息页面 */
+/* 角色資訊頁面 */
 "生日" = "生日";
 
-/* 弹出框按钮
-   设置页面 */
-"确定" = "确定";
+/* 彈出框按鈕
+ 設定頁面 */
+"確定" = "確定";
 
-/* 设置页面 */
-"确定要清空数据吗？" = "确定要清空数据吗？";
+/* 設定頁面 */
+"確定要清空資料嗎？" = "確定要清空資料嗎？";
 
-/* 设置页面 */
-"确定要缓存所有图片吗？" = "确定要缓存所有图片吗？";
+/* 設定頁面 */
+"確定要快取所有圖片嗎？" = "確定要快取所有圖片嗎？";
 
-/* 队伍详情页面 */
+/* 隊伍詳情頁面 */
 "秒" = "秒";
 
-/* 生日提醒页面 */
-"系统通知设置" = "系统通知设置";
+/* 生日提醒頁面 */
+"系統通知設定" = "系統通知設定";
 
-/* 设置页面 */
-"缓存图片取消" = "缓存图片取消";
+/* 設定頁面 */
+"快取圖片取消" = "快取圖片取消";
 
-/* 设置页面 */
-"缓存图片完成" = "缓存图片完成";
+/* 設定頁面 */
+"快取圖片完成" = "快取圖片完成";
 
-/* 设置页面 */
-"缓存图片已被中止" = "缓存图片已被中止";
+/* 設定頁面 */
+"快取圖片已被中止" = "快取圖片已被中止";
 
-/* 设置页面 */
-"缓存所有图片" = "缓存所有图片";
+/* 設定頁面 */
+"快取所有圖片" = "快取所有圖片";
 
-/* 队伍编辑页面 */
-"编辑" = "编辑";
+/* 隊伍編輯頁面 */
+"編輯" = "編輯";
 
-/* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。";
+/* 彈出框正文 */
+"缺少難度為%@的歌曲,建議等待當前更新完成，或嘗試下拉歌曲列表手動更新資料。" = "缺少難度為%@的歌曲,建議等待當前更新完成，或嘗試下拉歌曲列表手動更新資料。";
 
-/* 弹出框正文 */
-"获取到的live数据异常" = "获取到的live数据异常";
+/* 彈出框正文 */
+"獲取到的live資料異常" = "獲取到的live資料異常";
 
-/* 弹出框正文 */
-"获取到的卡数据异常" = "获取到的卡数据异常";
+/* 彈出框正文 */
+"獲取到的卡資料異常" = "獲取到的卡資料異常";
 
-/* 弹出框正文 */
-"获取到的歌曲数据异常" = "获取到的歌曲数据异常";
+/* 彈出框正文 */
+"獲取到的歌曲資料異常" = "獲取到的歌曲資料異常";
 
-/* 弹出框正文 */
-"获取到的谱面数据异常" = "获取到的谱面数据异常";
+/* 彈出框正文 */
+"獲取到的譜面數據異常" = "獲取到的譜面數據異常";
 
-/* 卡片详情页 */
-"获得途径" = "获得途径";
+/* 卡片詳情頁 */
+"獲得途徑" = "獲得途徑";
 
-/* 卡片详情页 */
-"获得途径(进化前)" = "获得途径(进化前)";
+/* 卡片詳情頁 */
+"獲得途徑(進化前)" = "獲得途徑(進化前)";
 
-/* 角色信息页面 */
+/* 角色資訊頁面 */
 "血型" = "血型";
 
-/* 队伍详情页面 */
-"表现值" = "表现值";
+/* 隊伍詳情頁面 */
+"表現值" = "表現值";
 
-/* 角色信息页面
-   卡片详情页 */
+/* 角色資訊頁面
+ 卡片詳情頁 */
 "角色所有卡片" = "角色所有卡片";
 
-/* 卡片详情页 */
-"触发几率%" = "触发几率%";
+/* 卡片詳情頁 */
+"觸發機率%" = "觸發機率%";
 
-/* 队伍详情页面 */
-"计算中..." = "计算中...";
+/* 隊伍詳情頁面 */
+"計算中..." = "計算中...";
 
-/* 弹出框正文 */
-"请先选择歌曲" = "请先选择歌曲";
+/* 彈出框正文 */
+"請先選擇歌曲" = "請先選擇歌曲";
 
-/* 弹出框正文 */
-"请完善队伍后，再点击存储" = "请完善队伍后，再点击存储";
+/* 彈出框正文 */
+"請完善隊伍後，再點選儲存" = "請完善隊伍後，再點選儲存";
 
-/* 队伍详情页面 */
-"请选择歌曲" = "请选择歌曲";
+/* 隊伍詳情頁面 */
+"請選擇歌曲" = "請選擇歌曲";
 
-/* 角色信息页面 */
+/* 角色資訊頁面 */
 "身高" = "身高";
 
-/* 卡片详情页 */
-"进化信息" = "进化信息";
+/* 卡片詳情頁 */
+"進化資訊" = "進化資訊";
 
-/* 弹出框标题 */
-"选择Groove类别" = "选择Groove类别";
+/* 彈出框標題 */
+"選擇Groove類別" = "選擇Groove類別";
 
-/* 生日提醒页面 */
-"选择提醒时区" = "选择提醒时区";
+/* 生日提醒頁面 */
+"選擇提醒時區" = "選擇提醒時區";
 
-/* 弹出框标题 */
-"选择歌曲模式" = "选择歌曲模式";
+/* 彈出框標題 */
+"選擇歌曲模式" = "選擇歌曲模式";
 
-/* 底部弹出框标题 */
-"选择难度" = "选择难度";
+/* 底部彈出框標題 */
+"選擇難度" = "選擇難度";
 
-/* 导航栏按钮
-   角色信息页面 */
+/* 導航欄按鈕
+ 角色資訊頁面 */
 "重置" = "重置";
 
-/* 弹出框标题 */
-"队伍不完整" = "队伍不完整";
+/* 彈出框標題 */
+"隊伍不完整" = "隊伍不完整";
 
-/* 队伍编辑页面 */
-"队员" = "队员";
+/* 隊伍編輯頁面 */
+"隊員" = "隊員";
 
-/* 队伍编辑页面 */
-"队长" = "队长";
+/* 隊伍編輯頁面 */
+"隊長" = "隊長";
 
-/* 队伍详情页面 */
-"队长加成" = "队长加成";
+/* 隊伍詳情頁面 */
+"隊長加成" = "隊長加成";
 
-/* 队伍详情页面
-   通用 */
-"队长技能" = "队长技能";
+/* 隊伍詳情頁面
+ 通用 */
+"隊長技能" = "隊長技能";
 
-/* 卡片详情页 */
+/* 卡片詳情頁 */
 "限定" = "限定";
 
-/* 谱面页面导航按钮 */
-"难度" = "难度";
+/* 譜面頁面導航按鈕 */
+"難度" = "難度";
 
-/* 技能触发几率的简写 */
+/* 技能觸發機率的簡寫 */
 "高" = "高";
-
