--- a/CGSSGuide/zh-Hant.lproj/Main.strings
+++ b/CGSSGuide/zh-Hant.lproj/Main.strings
@@ -8,47 +8,47 @@
 /* Class = "UITableViewController"; title = "工具"; ObjectID = "08b-yF-FVx"; */
 "08b-yF-FVx.title" = "工具";
 
-/* Class = "UINavigationItem"; title = "我的队伍"; ObjectID = "1N5-JG-Kjr"; */
-"1N5-JG-Kjr.title" = "我的队伍";
+/* Class = "UINavigationItem"; title = "我的隊伍"; ObjectID = "1N5-JG-Kjr"; */
+"1N5-JG-Kjr.title" = "我的隊伍";
 
-/* Class = "UITableViewSection"; headerTitle = "反馈"; ObjectID = "1cN-eL-xzi"; */
-"1cN-eL-xzi.headerTitle" = "反馈";
+/* Class = "UITableViewSection"; headerTitle = "反饋"; ObjectID = "1cN-eL-xzi"; */
+"1cN-eL-xzi.headerTitle" = "反饋";
 
-/* Class = "UITableViewController"; title = "角色排序和筛选"; ObjectID = "1ey-jy-bHg"; */
-"1ey-jy-bHg.title" = "角色排序和筛选";
+/* Class = "UITableViewController"; title = "角色排序和篩選"; ObjectID = "1ey-jy-bHg"; */
+"1ey-jy-bHg.title" = "角色排序和篩選";
 
-/* Class = "UITableViewController"; title = "歌曲筛选和排序"; ObjectID = "2yB-7S-JxI"; */
-"2yB-7S-JxI.title" = "歌曲筛选和排序";
+/* Class = "UITableViewController"; title = "歌曲篩選和排序"; ObjectID = "2yB-7S-JxI"; */
+"2yB-7S-JxI.title" = "歌曲篩選和排序";
 
-/* Class = "UIButton"; normalTitle = "Groove活动"; ObjectID = "3ui-02-uWZ"; */
-"3ui-02-uWZ.normalTitle" = "Groove活动";
+/* Class = "UIButton"; normalTitle = "Groove活動"; ObjectID = "3ui-02-uWZ"; */
+"3ui-02-uWZ.normalTitle" = "Groove活動";
 
 /* Class = "UIButton"; normalTitle = "  AB  "; ObjectID = "4Lk-o2-12q"; */
 "4Lk-o2-12q.normalTitle" = "  AB  ";
 
-/* Class = "UINavigationController"; title = "卡片导航"; ObjectID = "5Hs-jz-swe"; */
-"5Hs-jz-swe.title" = "卡片导航";
+/* Class = "UINavigationController"; title = "卡片導航"; ObjectID = "5Hs-jz-swe"; */
+"5Hs-jz-swe.title" = "卡片導航";
 
-/* Class = "UIButton"; normalTitle = "强判"; ObjectID = "5Tw-SW-h31"; */
-"5Tw-SW-h31.normalTitle" = "强判";
+/* Class = "UIButton"; normalTitle = "強判"; ObjectID = "5Tw-SW-h31"; */
+"5Tw-SW-h31.normalTitle" = "強判";
 
-/* Class = "UIButton"; normalTitle = "不断连"; ObjectID = "5UY-VC-aGN"; */
-"5UY-VC-aGN.normalTitle" = "不断连";
+/* Class = "UIButton"; normalTitle = "不斷連"; ObjectID = "5UY-VC-aGN"; */
+"5UY-VC-aGN.normalTitle" = "不斷連";
 
 /* Class = "UIButton"; normalTitle = "20~29"; ObjectID = "5u8-dv-dFO"; */
 "5u8-dv-dFO.normalTitle" = "20~29";
 
-/* Class = "UIButton"; normalTitle = "年龄"; ObjectID = "6Jq-AO-gGy"; */
-"6Jq-AO-gGy.normalTitle" = "年龄";
+/* Class = "UIButton"; normalTitle = "年齡"; ObjectID = "6Jq-AO-gGy"; */
+"6Jq-AO-gGy.normalTitle" = "年齡";
 
-/* Class = "UIButton"; normalTitle = "年龄<10"; ObjectID = "6Mg-Kf-75T"; */
-"6Mg-Kf-75T.normalTitle" = "年龄<10";
+/* Class = "UIButton"; normalTitle = "年齡<10"; ObjectID = "6Mg-Kf-75T"; */
+"6Mg-Kf-75T.normalTitle" = "年齡<10";
 
-/* Class = "UIButton"; normalTitle = "已付声"; ObjectID = "6oo-pW-kHa"; */
-"6oo-pW-kHa.normalTitle" = "已付声";
+/* Class = "UIButton"; normalTitle = "已付聲"; ObjectID = "6oo-pW-kHa"; */
+"6oo-pW-kHa.normalTitle" = "已付聲";
 
-/* Class = "UIButton"; normalTitle = "更新时间"; ObjectID = "7lt-cg-VIJ"; */
-"7lt-cg-VIJ.normalTitle" = "更新时间";
+/* Class = "UIButton"; normalTitle = "更新時間"; ObjectID = "7lt-cg-VIJ"; */
+"7lt-cg-VIJ.normalTitle" = "更新時間";
 
 /* Class = "UIButton"; normalTitle = "已收藏"; ObjectID = "88G-Qa-pCH"; */
 "88G-Qa-pCH.normalTitle" = "已收藏";
@@ -68,56 +68,56 @@
 /* Class = "UIButton"; normalTitle = "Visual"; ObjectID = "Cde-v7-eat"; */
 "Cde-v7-eat.normalTitle" = "Visual";
 
-/* Class = "UIButton"; normalTitle = "过载"; ObjectID = "Cxe-2I-TMr"; */
-"Cxe-2I-TMr.normalTitle" = "过载";
+/* Class = "UIButton"; normalTitle = "過載"; ObjectID = "Cxe-2I-TMr"; */
+"Cxe-2I-TMr.normalTitle" = "過載";
 
 /* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "D6I-uh-wTP"; */
 "D6I-uh-wTP.headerTitle" = "排序";
 
-/* Class = "UIButton"; normalTitle = "未付声"; ObjectID = "D80-A7-QVe"; */
-"D80-A7-QVe.normalTitle" = "未付声";
+/* Class = "UIButton"; normalTitle = "未付聲"; ObjectID = "D80-A7-QVe"; */
+"D80-A7-QVe.normalTitle" = "未付聲";
 
-/* Class = "UIButton"; normalTitle = "传统活动"; ObjectID = "DHK-oa-5HG"; */
-"DHK-oa-5HG.normalTitle" = "传统活动";
+/* Class = "UIButton"; normalTitle = "傳統活動"; ObjectID = "DHK-oa-5HG"; */
+"DHK-oa-5HG.normalTitle" = "傳統活動";
 
 /* Class = "UIButton"; normalTitle = "稀有度"; ObjectID = "Dyg-Og-4GD"; */
 "Dyg-Og-4GD.normalTitle" = "稀有度";
 
-/* Class = "UITabBarController"; title = "根标签栏"; ObjectID = "Eme-MZ-6LK"; */
-"Eme-MZ-6LK.title" = "根标签栏";
+/* Class = "UITabBarController"; title = "根標籤欄"; ObjectID = "Eme-MZ-6LK"; */
+"Eme-MZ-6LK.title" = "根標籤欄";
 
-/* Class = "UILabel"; text = "版权声明"; ObjectID = "FGJ-uD-iwy"; */
-"FGJ-uD-iwy.text" = "版权声明";
+/* Class = "UILabel"; text = "版權聲明"; ObjectID = "FGJ-uD-iwy"; */
+"FGJ-uD-iwy.text" = "版權聲明";
 
 /* Class = "UIButton"; normalTitle = "  H  "; ObjectID = "FLW-Yl-Ihn"; */
 "FLW-Yl-Ihn.normalTitle" = "  H  ";
 
-/* Class = "UIButton"; normalTitle = "体重"; ObjectID = "HHI-xd-BPp"; */
-"HHI-xd-BPp.normalTitle" = "体重";
+/* Class = "UIButton"; normalTitle = "體重"; ObjectID = "HHI-xd-BPp"; */
+"HHI-xd-BPp.normalTitle" = "體重";
 
 /* Class = "UIButton"; normalTitle = "Vocal"; ObjectID = "HIM-42-iDe"; */
 "HIM-42-iDe.normalTitle" = "Vocal";
 
-/* Class = "UIButton"; normalTitle = "锁血"; ObjectID = "In1-C8-p0v"; */
-"In1-C8-p0v.normalTitle" = "锁血";
+/* Class = "UIButton"; normalTitle = "鎖血"; ObjectID = "In1-C8-p0v"; */
+"In1-C8-p0v.normalTitle" = "鎖血";
 
-/* Class = "UINavigationController"; title = "组队导航"; ObjectID = "IyO-O4-iMn"; */
-"IyO-O4-iMn.title" = "组队导航";
+/* Class = "UINavigationController"; title = "組隊導航"; ObjectID = "IyO-O4-iMn"; */
+"IyO-O4-iMn.title" = "組隊導航";
 
-/* Class = "UITabBarItem"; title = "组队"; ObjectID = "Ji2-5n-2Mz"; */
-"Ji2-5n-2Mz.title" = "组队";
+/* Class = "UITabBarItem"; title = "組隊"; ObjectID = "Ji2-5n-2Mz"; */
+"Ji2-5n-2Mz.title" = "組隊";
 
 /* Class = "UIButton"; normalTitle = "已收藏"; ObjectID = "Kob-rj-znb"; */
 "Kob-rj-znb.normalTitle" = "已收藏";
 
-/* Class = "UINavigationController"; title = "歌曲导航"; ObjectID = "KxG-H5-NIc"; */
-"KxG-H5-NIc.title" = "歌曲导航";
+/* Class = "UINavigationController"; title = "歌曲導航"; ObjectID = "KxG-H5-NIc"; */
+"KxG-H5-NIc.title" = "歌曲導航";
 
-/* Class = "UILabel"; text = "清除缓存数据"; ObjectID = "L0F-L7-4EY"; */
-"L0F-L7-4EY.text" = "清除缓存数据";
+/* Class = "UILabel"; text = "清除快取資料"; ObjectID = "L0F-L7-4EY"; */
+"L0F-L7-4EY.text" = "清除快取資料";
 
-/* Class = "UINavigationController"; title = "设置导航"; ObjectID = "Lc3-lA-ZOL"; */
-"Lc3-lA-ZOL.title" = "设置导航";
+/* Class = "UINavigationController"; title = "設定導航"; ObjectID = "Lc3-lA-ZOL"; */
+"Lc3-lA-ZOL.title" = "設定導航";
 
 /* Class = "UIButton"; normalTitle = " SR+ "; ObjectID = "MNn-WX-05k"; */
 "MNn-WX-05k.normalTitle" = " SR+ ";
@@ -140,35 +140,35 @@
 /* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "S9a-oB-UoS"; */
 "S9a-oB-UoS.headerTitle" = "排序";
 
-/* Class = "UITableViewSection"; headerTitle = "关于"; ObjectID = "Sc7-uC-obv"; */
-"Sc7-uC-obv.headerTitle" = "关于";
+/* Class = "UITableViewSection"; headerTitle = "關於"; ObjectID = "Sc7-uC-obv"; */
+"Sc7-uC-obv.headerTitle" = "關於";
 
 /* Class = "UIButton"; normalTitle = "          △          "; ObjectID = "UCU-PC-phX"; */
 "UCU-PC-phX.normalTitle" = "          △          ";
 
-/* Class = "UILabel"; text = "当前版本"; ObjectID = "UuG-iS-uix"; */
-"UuG-iS-uix.text" = "当前版本";
+/* Class = "UILabel"; text = "當前版本"; ObjectID = "UuG-iS-uix"; */
+"UuG-iS-uix.text" = "當前版本";
 
 /* Class = "UIButton"; normalTitle = "Dance"; ObjectID = "Wbd-ym-a55"; */
 "Wbd-ym-a55.normalTitle" = "Dance";
 
-/* Class = "UIButton"; normalTitle = "无技能"; ObjectID = "Wv5-vc-Mbq"; */
-"Wv5-vc-Mbq.normalTitle" = "无技能";
+/* Class = "UIButton"; normalTitle = "無技能"; ObjectID = "Wv5-vc-Mbq"; */
+"Wv5-vc-Mbq.normalTitle" = "無技能";
 
 /* Class = "UIButton"; normalTitle = "Passion"; ObjectID = "X7i-JU-TUQ"; */
 "X7i-JU-TUQ.normalTitle" = "Passion";
 
-/* Class = "UITableViewController"; title = "卡片筛选和排序"; ObjectID = "XB8-jt-AiW"; */
-"XB8-jt-AiW.title" = "卡片筛选和排序";
+/* Class = "UITableViewController"; title = "卡片篩選和排序"; ObjectID = "XB8-jt-AiW"; */
+"XB8-jt-AiW.title" = "卡片篩選和排序";
 
 /* Class = "UITableViewController"; title = "卡片"; ObjectID = "XEw-Y1-ITn"; */
 "XEw-Y1-ITn.title" = "卡片";
 
-/* Class = "UIButton"; normalTitle = "游戏编号"; ObjectID = "XW8-kK-Q8N"; */
-"XW8-kK-Q8N.normalTitle" = "游戏编号";
+/* Class = "UIButton"; normalTitle = "遊戲編號"; ObjectID = "XW8-kK-Q8N"; */
+"XW8-kK-Q8N.normalTitle" = "遊戲編號";
 
-/* Class = "UITableViewSection"; headerTitle = "筛选"; ObjectID = "XrL-IG-AMC"; */
-"XrL-IG-AMC.headerTitle" = "筛选";
+/* Class = "UITableViewSection"; headerTitle = "篩選"; ObjectID = "XrL-IG-AMC"; */
+"XrL-IG-AMC.headerTitle" = "篩選";
 
 /* Class = "UIButton"; normalTitle = "Vocal"; ObjectID = "YOt-Q0-8lA"; */
 "YOt-Q0-8lA.normalTitle" = "Vocal";
@@ -182,8 +182,8 @@
 /* Class = "UIButton"; normalTitle = "其他"; ObjectID = "ZmN-V1-KQc"; */
 "ZmN-V1-KQc.normalTitle" = "其他";
 
-/* Class = "UITableViewController"; title = "组队"; ObjectID = "Zys-WZ-9cy"; */
-"Zys-WZ-9cy.title" = "组队";
+/* Class = "UITableViewController"; title = "組隊"; ObjectID = "Zys-WZ-9cy"; */
+"Zys-WZ-9cy.title" = "組隊";
 
 /* Class = "UIButton"; normalTitle = "Combo加分"; ObjectID = "a2o-Af-Vg4"; */
 "a2o-Af-Vg4.normalTitle" = "Combo加分";
@@ -206,8 +206,8 @@
 /* Class = "UIButton"; normalTitle = "Total"; ObjectID = "db8-xK-u51"; */
 "db8-xK-u51.normalTitle" = "Total";
 
-/* Class = "UIButton"; normalTitle = "常规歌曲"; ObjectID = "ddL-tZ-2ME"; */
-"ddL-tZ-2ME.normalTitle" = "常规歌曲";
+/* Class = "UIButton"; normalTitle = "常規歌曲"; ObjectID = "ddL-tZ-2ME"; */
+"ddL-tZ-2ME.normalTitle" = "常規歌曲";
 
 /* Class = "UIButton"; normalTitle = "Cool"; ObjectID = "dfb-tZ-B9F"; */
 "dfb-tZ-B9F.normalTitle" = "Cool";
@@ -215,23 +215,23 @@
 /* Class = "UIButton"; normalTitle = "  O  "; ObjectID = "efw-R2-QEc"; */
 "efw-R2-QEc.normalTitle" = "  O  ";
 
-/* Class = "UILabel"; text = "致谢"; ObjectID = "fQd-50-rlt"; */
-"fQd-50-rlt.text" = "致谢";
+/* Class = "UILabel"; text = "致謝"; ObjectID = "fQd-50-rlt"; */
+"fQd-50-rlt.text" = "致謝";
 
-/* Class = "UILabel"; text = "启动时自动检查更新"; ObjectID = "fhG-RG-Edf"; */
-"fhG-RG-Edf.text" = "启动时自动检查更新";
+/* Class = "UILabel"; text = "啟動時自動檢查更新"; ObjectID = "fhG-RG-Edf"; */
+"fhG-RG-Edf.text" = "啟動時自動檢查更新";
 
 /* Class = "UITabBarItem"; title = "歌曲"; ObjectID = "gE2-j0-zef"; */
 "gE2-j0-zef.title" = "歌曲";
 
-/* Class = "UITabBarItem"; title = "设置"; ObjectID = "gI8-ss-NS6"; */
-"gI8-ss-NS6.title" = "设置";
+/* Class = "UITabBarItem"; title = "設定"; ObjectID = "gI8-ss-NS6"; */
+"gI8-ss-NS6.title" = "設定";
 
 /* Class = "UIButton"; normalTitle = "SSR+"; ObjectID = "gvK-S0-WhK"; */
 "gvK-S0-WhK.normalTitle" = "SSR+";
 
-/* Class = "UITableViewSection"; headerTitle = "筛选"; ObjectID = "hJn-41-ekr"; */
-"hJn-41-ekr.headerTitle" = "筛选";
+/* Class = "UITableViewSection"; headerTitle = "篩選"; ObjectID = "hJn-41-ekr"; */
+"hJn-41-ekr.headerTitle" = "篩選";
 
 /* Class = "UIButton"; normalTitle = "Visual"; ObjectID = "ipj-ta-j3r"; */
 "ipj-ta-j3r.normalTitle" = "Visual";
@@ -245,8 +245,8 @@
 /* Class = "UIButton"; normalTitle = " All "; ObjectID = "kUy-IE-dVt"; */
 "kUy-IE-dVt.normalTitle" = " All ";
 
-/* Class = "UIButton"; normalTitle = "相册编号"; ObjectID = "l5B-2M-8yE"; */
-"l5B-2M-8yE.normalTitle" = "相册编号";
+/* Class = "UIButton"; normalTitle = "相簿編號"; ObjectID = "l5B-2M-8yE"; */
+"l5B-2M-8yE.normalTitle" = "相簿編號";
 
 /* Class = "UIButton"; normalTitle = "  W  "; ObjectID = "l5E-7h-pBd"; */
 "l5E-7h-pBd.normalTitle" = "  W  ";
@@ -260,8 +260,8 @@
 /* Class = "UIButton"; normalTitle = "  N+  "; ObjectID = "mQn-gU-gqO"; */
 "mQn-gU-gqO.normalTitle" = "  N+  ";
 
-/* Class = "UIButton"; normalTitle = "最大难度"; ObjectID = "mUG-qN-sIm"; */
-"mUG-qN-sIm.normalTitle" = "最大难度";
+/* Class = "UIButton"; normalTitle = "最大難度"; ObjectID = "mUG-qN-sIm"; */
+"mUG-qN-sIm.normalTitle" = "最大難度";
 
 /* Class = "UIButton"; normalTitle = "bpm"; ObjectID = "mdx-WU-uGO"; */
 "mdx-WU-uGO.normalTitle" = "bpm";
@@ -269,20 +269,20 @@
 /* Class = "UIButton"; normalTitle = "Cute"; ObjectID = "njF-7c-Q8a"; */
 "njF-7c-Q8a.normalTitle" = "Cute";
 
-/* Class = "UIButton"; normalTitle = "更新时间"; ObjectID = "pWn-aV-e5X"; */
-"pWn-aV-e5X.normalTitle" = "更新时间";
+/* Class = "UIButton"; normalTitle = "更新時間"; ObjectID = "pWn-aV-e5X"; */
+"pWn-aV-e5X.normalTitle" = "更新時間";
 
 /* Class = "UIButton"; normalTitle = "          ▽          "; ObjectID = "qt5-t2-e2v"; */
 "qt5-t2-e2v.normalTitle" = "          ▽          ";
 
-/* Class = "UILabel"; text = "评价"; ObjectID = "r3b-gr-oUP"; */
-"r3b-gr-oUP.text" = "评价";
+/* Class = "UILabel"; text = "評價"; ObjectID = "r3b-gr-oUP"; */
+"r3b-gr-oUP.text" = "評價";
 
 /* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "rD2-JL-rj6"; */
 "rD2-JL-rj6.headerTitle" = "排序";
 
-/* Class = "UINavigationController"; title = "工具导航"; ObjectID = "sAv-Q2-aG8"; */
-"sAv-Q2-aG8.title" = "工具导航";
+/* Class = "UINavigationController"; title = "工具導航"; ObjectID = "sAv-Q2-aG8"; */
+"sAv-Q2-aG8.title" = "工具導航";
 
 /* Class = "UIButton"; normalTitle = "Passion"; ObjectID = "sGN-vw-0uS"; */
 "sGN-vw-0uS.normalTitle" = "Passion";
@@ -293,8 +293,8 @@
 /* Class = "UIButton"; normalTitle = "          △          "; ObjectID = "teG-01-FuT"; */
 "teG-01-FuT.normalTitle" = "          △          ";
 
-/* Class = "UILabel"; text = "移动网络下加载卡片大图"; ObjectID = "u1E-LY-NTo"; */
-"u1E-LY-NTo.text" = "移动网络下加载卡片大图";
+/* Class = "UILabel"; text = "行動網路下載入卡片大圖"; ObjectID = "u1E-LY-NTo"; */
+"u1E-LY-NTo.text" = "行動網路下載入卡片大圖";
 
 /* Class = "UIButton"; normalTitle = "未收藏"; ObjectID = "uLj-NT-Pgo"; */
 "uLj-NT-Pgo.normalTitle" = "未收藏";
@@ -302,35 +302,35 @@
 /* Class = "UIButton"; normalTitle = "Dance"; ObjectID = "uiM-RA-fhT"; */
 "uiM-RA-fhT.normalTitle" = "Dance";
 
-/* Class = "UITableViewSection"; headerTitle = "筛选"; ObjectID = "vSe-a1-0gm"; */
-"vSe-a1-0gm.headerTitle" = "筛选";
+/* Class = "UITableViewSection"; headerTitle = "篩選"; ObjectID = "vSe-a1-0gm"; */
+"vSe-a1-0gm.headerTitle" = "篩選";
 
 /* Class = "UITabBarItem"; title = "工具"; ObjectID = "wJt-PI-tVQ"; */
 "wJt-PI-tVQ.title" = "工具";
 
-/* Class = "UILabel"; text = "当前数据版本"; ObjectID = "we8-dY-w1C"; */
-"we8-dY-w1C.text" = "当前数据版本";
+/* Class = "UILabel"; text = "當前資料版本"; ObjectID = "we8-dY-w1C"; */
+"we8-dY-w1C.text" = "當前資料版本";
 
 /* Class = "UIButton"; normalTitle = "  B  "; ObjectID = "xi1-wF-saE"; */
 "xi1-wF-saE.normalTitle" = "  B  ";
 
-/* Class = "UILabel"; text = "发送邮件"; ObjectID = "xrP-YC-gLm"; */
-"xrP-YC-gLm.text" = "发送邮件";
+/* Class = "UILabel"; text = "傳送郵件"; ObjectID = "xrP-YC-gLm"; */
+"xrP-YC-gLm.text" = "傳送郵件";
 
-/* Class = "UILabel"; text = "缓存所有图片"; ObjectID = "yF0-cl-Say"; */
-"yF0-cl-Say.text" = "缓存所有图片";
+/* Class = "UILabel"; text = "快取所有圖片"; ObjectID = "yF0-cl-Say"; */
+"yF0-cl-Say.text" = "快取所有圖片";
 
 /* Class = "UIButton"; normalTitle = "30~"; ObjectID = "ywN-8C-fgd"; */
 "ywN-8C-fgd.normalTitle" = "30~";
 
-/* Class = "UITableViewSection"; headerTitle = "数据"; ObjectID = "zA8-n9-zYp"; */
-"zA8-n9-zYp.headerTitle" = "数据";
+/* Class = "UITableViewSection"; headerTitle = "資料"; ObjectID = "zA8-n9-zYp"; */
+"zA8-n9-zYp.headerTitle" = "資料";
 
-/* Class = "UINavigationItem"; title = "实用工具"; ObjectID = "zeC-Rh-4X6"; */
-"zeC-Rh-4X6.title" = "实用工具";
+/* Class = "UINavigationItem"; title = "實用工具"; ObjectID = "zeC-Rh-4X6"; */
+"zeC-Rh-4X6.title" = "實用工具";
 
 /* Class = "UIButton"; normalTitle = "  B  "; ObjectID = "zjg-Tp-oRL"; */
 "zjg-Tp-oRL.normalTitle" = "  B  ";
 
-/* Class = "UINavigationItem"; title = "设置"; ObjectID = "zkd-c8-p78"; */
-"zkd-c8-p78.title" = "设置";
+/* Class = "UINavigationItem"; title = "設定"; ObjectID = "zkd-c8-p78"; */
+"zkd-c8-p78.title" = "設定";
