适应国际化版本 界面元素优化 繁体中文翻译文本修正

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -409,3 +409,28 @@
 /* 技能触发几率的简写 */
 "高" = "高";
 
+/* 技能类型 */
+"强判" = "强判";
+
+/* 技能类型 */
+"Combo保护" = "Combo保护";
+
+/* 技能类型 */
+"过载" = "过载";
+
+/* 技能类型 */
+"锁血" = "锁血";
+
+/* 技能类型 */
+"Combo加成" = "Combo加成";
+
+/* 技能类型 */
+"无技能" = "无技能";
+
+/* 技能类型 */
+"分数加成" = "分数加成";
+
+/* 技能类型 */
+"恢复生命" = "恢复生命";
+
+
