--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 模拟抽卡页面 */
-"* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSRはすべてSSRの40%であります\n* 当期新SR、Rの確率アップはみなされません;
+"* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSRはすべてSSRの40%であります\n* 当期新SR、Rの確率アップはみなされません";
 
 /* 队伍详情页面 */
 "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均值を計算します、毎回の結果は異なります\n* 平均スコアは発動確率アップしたセンター効果の影響をみなされません";
@@ -408,3 +408,28 @@
 
 /* 技能触发几率的简写 */
 "高" = "高";
+
+/* 技能类型 */
+"强判" = "判定強化";
+
+/* 技能类型 */
+"Combo保护" = "コンボ継続";
+
+/* 技能类型 */
+"过载" = "オーバーロード";
+
+/* 技能类型 */
+"锁血" = "ライフガード";
+
+/* 技能类型 */
+"Combo加成" = "コンボボーナス";
+
+/* 技能类型 */
+"无技能" = "スキルなし";
+
+/* 技能类型 */
+"分数加成" = "スコアアップ";
+
+/* 技能类型 */
+"恢复生命" = "ライフ回復";
+
